# C0_compiler

./: C0.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: example1.c0  example2.c0  example3.c0  example4.c0  example5.c0  teste.c0
src/: AST.hs  CodeGen1.hs  CodeGen2.hs  IR.hs  Lexer  Lexer.hi  Lexer.hs  Lexer.x  Main  Main.hi  Main.hs  Parser.y
